--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                         <i class="fas fa-search"></i>
                         <input type="text" id="searchInput" placeholder="Search activities, dates, or quests...">
                     </div>
+                    <button id="themeToggle" class="theme-toggle" title="Toggle dark/light theme">
+                        <i class="fas fa-moon"></i>
+                    </button>
                     <button id="resetProgress" class="btn btn-danger">
                         <i class="fas fa-undo"></i>
                         Reset Progress
