Add archetype data and HTML structure for Archetype Tracker

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                         <i class="fas fa-search"></i>
                         <input type="text" id="searchInput" placeholder="Search activities, dates, or quests...">
                     </div>
+                    <a href="archetypes.html" class="btn btn-secondary">
+                        <i class="fas fa-sitemap"></i>
+                        Archetype Tree
+                    </a>
                     <button id="themeToggle" class="theme-toggle" title="Toggle dark/light theme">
                         <i class="fas fa-moon"></i>
                     </button>
@@ -33,6 +37,35 @@
                 </div>
             </div>
         </header>
+
+        <!-- Features Banner -->
+        <section class="features-banner">
+            <div class="features-content">
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-tasks"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Walkthrough Tracker</h3>
+                        <p>Track your 100% completion progress day by day</p>
+                    </div>
+                </div>
+                <div class="feature-divider"></div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-sitemap"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Archetype Progression</h3>
+                        <p>Character-specific archetype trees with royal classes</p>
+                    </div>
+                    <a href="archetypes.html" class="feature-link">
+                        <i class="fas fa-external-link-alt"></i>
+                        Open Tracker
+                    </a>
+                </div>
+            </div>
+        </section>
 
         <!-- Progress Overview -->
         <section class="progress-overview">
