Add global unique archetype stats to the tracker

--- a/archetypes.html
+++ b/archetypes.html
@@ -53,6 +53,13 @@
                     </div>
                 </div>
                 <div class="stat-card">
+                    <div class="stat-number" id="globalUnlockedCount">0/46</div>
+                    <div class="stat-label">Global Unique Unlocked</div>
+                    <div class="progress-bar">
+                        <div class="progress-fill" id="globalProgressBar"></div>
+                    </div>
+                </div>
+                <div class="stat-card">
                     <div class="stat-number" id="availableCount">0</div>
                     <div class="stat-label">Available to Unlock</div>
                 </div>
