--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                         <i class="fas fa-sitemap"></i>
                         Archetype Tree
                     </a>
+                    <a href="game-info.html" class="btn btn-secondary">
+                        <i class="fas fa-info-circle"></i>
+                        Game Info
+                    </a>
                     <button id="themeToggle" class="theme-toggle" title="Toggle dark/light theme">
                         <i class="fas fa-moon"></i>
                     </button>
@@ -62,6 +66,20 @@
                     <a href="archetypes.html" class="feature-link">
                         <i class="fas fa-external-link-alt"></i>
                         Open Tracker
+                    </a>
+                </div>
+                <div class="feature-divider"></div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-info-circle"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Game Information Hub</h3>
+                        <p>Fishing guide, cooking tips, and comprehensive game mechanics</p>
+                    </div>
+                    <a href="game-info.html" class="feature-link">
+                        <i class="fas fa-external-link-alt"></i>
+                        Open Guide
                     </a>
                 </div>
             </div>
