--- a/archetypes.html
+++ b/archetypes.html
@@ -24,6 +24,10 @@
                         <i class="fas fa-arrow-left"></i>
                         Back to Tracker
                     </a>
+                    <a href="game-info.html" class="btn btn-secondary">
+                        <i class="fas fa-info-circle"></i>
+                        Game Info
+                    </a>
                     <button id="themeToggle" class="theme-toggle" title="Toggle dark/light theme">
                         <i class="fas fa-moon"></i>
                     </button>
